<resources>
    <string name="AddrIsError">Address setting error</string>
    <string name="Default">Default</string>
    <string name="ExternalStorageerror">Information:External storage is not available</string>
    <string name="FileIsRecording">This file is recording, you can\'t delete it.</string>
    <string name="Friday">Fri</string>
    <string name="Monday">Mon</string>
    <string name="PleaseWait">Please wait...</string>
    <string name="PortIsError">Port setting error</string>
    <string name="Saturday">Sat</string>
    <string name="ServerIpError">Connect server IP fail.</string>
    <string name="Sunday">Sun</string>
    <string name="Tuesday">Tue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accountName">UserName</string>
    <string name="add">Add</string>
    <string name="addserver">Add Server</string>
    <string name="ai_cal_Horizon">Horizon</string>
    <string name="ai_cal_cam_to_vehicle_Head">CamToVehicleHead(cm)</string>
    <string name="ai_cal_camera_Height">Camera height(cm)</string>
    <string name="ai_cal_get_adas_config_fail">Get ADAS calibration config fail</string>
    <string name="ai_cal_get_adas_config_success">Get ADAS calibration config success</string>
    <string name="ai_cal_set_adas_cam_to_vehicle_head_range_error">Camera to vehicle head error</string>
    <string name="ai_cal_set_adas_camera_height_range_error">Camera height error</string>
    <string name="ai_cal_set_adas_channel_invalid">Channel invalid</string>
    <string name="ai_cal_set_adas_config_fail">Set ADAS calibration config fail</string>
    <string name="ai_cal_set_adas_config_success">Set ADAS calibration config success</string>
    <string name="ai_cal_set_adas_vehicle_width_range_error">Vehicle width error</string>
    <string name="ai_cal_vehicle_Width">Vehicle width(cm)</string>
    <string name="ai_cal_vehicle_center_Line">Vehicle center</string>
    <string name="alarm_record">Alarm</string>
    <string name="app_name">UView</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspectradio">Aspect Radio</string>
    <string name="audio">Audio</string>
    <string name="authority_dialog_sure">OK</string>
    <string name="authority_dialog_text">You have no access rights</string>
    <string name="auto">Auto</string>
    <string name="autologin">Auto login</string>
    <string name="autoplay">Auto Play</string>
    <string name="back">Back</string>
    <string name="bar_string_placeholder" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="camerablock">Camera block</string>
    <string name="cancel">Cancel</string>
    <string name="capture">Capture</string>
    <string name="capture_failed">Information:Capture failed.</string>
    <string name="capture_successful">Information:Capture successful</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="channel">Channel</string>
    <string name="channelcount">Channel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closeall">close all</string>
    <string name="closeptzinfo">Information:PTZ Mode closed</string>
    <string name="closesound">Information:Sound closed</string>
    <string name="closevideo">Information:Video closed</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_day" />
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="config_Add">Add</string>
    <string name="config_BitRate">Bitrate</string>
    <string name="config_BitRateMode">Bitrate mode</string>
    <string name="config_Channel">Channel</string>
    <string name="config_CopyChToCh">Copy</string>
    <string name="config_Date">Date</string>
    <string name="config_Delete">Delete</string>
    <string name="config_Enable">Enable</string>
    <string name="config_EncodeType">Encode type</string>
    <string name="config_EndTime">End time</string>
    <string name="config_FrameRate">Frame rate</string>
    <string name="config_Plan">Plan</string>
    <string name="config_Qulity">Quality</string>
    <string name="config_Resolution">Resolution</string>
    <string name="config_Save">Save</string>
    <string name="config_StartTime">Start time</string>
    <string name="config_alarm_Schedule">Schedule</string>
    <string name="config_alarm_Sensitivity">Sensitivity</string>
    <string name="config_alarm_Trigger">Trigger</string>
    <string name="config_record_schedule_Rt">Mode</string>
    <string name="down">Down</string>
    <string name="eventplayback">Event Playback</string>
    <string name="fast">Fast</string>
    <string name="information">Information</string>
    <string name="initrate">1X</string>
    <string name="inittime">00:00</string>
    <string name="left">Left</string>
    <string name="play">Play</string>
    <string name="preview">Liveview</string>
    <string name="ptz">PTZ</string>
    <string name="record">Record</string>
    <string name="right">Right</string>
    <string name="slow">Slow</string>
    <string name="sound">Sound</string>
    <string name="stop">Stop</string>
    <string name="up">Up</string>
</resources>