<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#999999" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/config_alarm_rl_content" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" style="@style/LinearLayoutParent">
            <RelativeLayout android:id="@+id/config_alarm_rl_ch" style="@style/RelativeLayoutParent">
                <TextView android:text="@string/config_Channel" style="@style/TvParentLeft"/>
                <TextView android:id="@+id/config_alarm_tv_ch" android:text="" style="@style/TvRecordRight"/>
            </RelativeLayout>
            <View style="@style/ViewLineParent"/>
            <RelativeLayout style="@style/RelativeLayoutParent">
                <TextView android:text="@string/config_Enable" style="@style/TvParentLeft"/>
                <Button android:id="@+id/config_alarm_btn_enable" android:background="@drawable/switch_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15dp" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View style="@style/ViewLineParent"/>
            <RelativeLayout android:id="@+id/config_alarm_rl_sst" style="@style/RelativeLayoutParent">
                <TextView android:text="@string/config_alarm_Sensitivity" style="@style/TvParentLeft"/>
                <TextView android:id="@+id/config_alarm_tv_sst" android:text="" style="@style/TvRecordRight"/>
            </RelativeLayout>
            <View style="@style/ViewLineParent"/>
            <RelativeLayout android:id="@+id/config_alarm_rl_schedule" style="@style/RelativeLayoutParent">
                <TextView android:text="@string/config_alarm_Schedule" style="@style/TvParentLeft"/>
                <TextView android:id="@+id/config_alarm_tv_schedule" style="@style/TvRecordRight"/>
            </RelativeLayout>
            <View style="@style/ViewLineParent"/>
            <RelativeLayout android:id="@+id/config_alarm_rl_trigger" style="@style/RelativeLayoutParent">
                <TextView android:text="@string/config_alarm_Trigger" style="@style/TvParentLeft"/>
                <TextView android:id="@+id/config_alarm_tv_trigger" style="@style/TvRecordRight"/>
            </RelativeLayout>
        </LinearLayout>
        <Button android:id="@+id/config_alarm_btn_copy" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/config_CopyChToCh" android:layout_alignParentBottom="true" style="@style/ButtonParent"/>
    </RelativeLayout>
</RelativeLayout>
